--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+
+  <!-- Preload -->
+  <link rel="preload" href="assets/decentraland-logo.png" as="image">
+  <link rel="preload" href="assets/isologo.svg" as="image">
+  <link rel="preload" href="assets/isologotypo.svg" as="image">
+
+  <script defer rel="preload" as="script" src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="https://hosted-sip.civic.com/css/civic-modal.min.css">
   <script src="https://hosted-sip.civic.com/js/civic.sip.min.js"></script>
 </head>
