Images optimazed for web

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 
   <!-- Preload -->
   <link rel="preload" href="assets/decentraland-logo.png" as="image">
+  <link rel="preload" href="assets/metamask.png" as="image">
   <link rel="preload" href="assets/isologo.svg" as="image">
   <link rel="preload" href="assets/isologotypo.svg" as="image">
 
