--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Preload -->
-  <link rel="preload" href="assets/decentraland-logo.png" as="image">
-  <link rel="preload" href="assets/metamask.png" as="image">
-  <link rel="preload" href="assets/isologo.svg" as="image">
-  <link rel="preload" href="assets/isologotypo.svg" as="image">
+  <link rel="preload" href="assets/img/decentraland-logo.png" as="image">
+  <link rel="preload" href="assets/img/metamask.png" as="image">
+  <link rel="preload" href="assets/img/isologo.svg" as="image">
+  <link rel="preload" href="assets/img/isologotypo.svg" as="image">
 
   <script defer rel="preload" as="script" src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
 
