--- a/src/index.html
+++ b/src/index.html
@@ -21,40 +21,13 @@
   <link rel="preload" href="assets/img/metamask.png" as="image">
   <link rel="preload" href="assets/img/404-tree.svg" as="image">
 
-  <link rel="preload" href="assets/fonts/raleway-light.eot" as="font" type="application/vnd.ms-fontobject" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-light.woff" as="font" type="font/woff" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-light.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-light.svg" as="font" type="image/svg+xml" crossorigin="anonymous">
-
-  <link rel="preload" href="assets/fonts/raleway-regular.eot" as="font" type="application/vnd.ms-fontobject" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-regular.woff" as="font" type="font/woff" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-regular.svg" as="font" type="image/svg+xml" crossorigin="anonymous">
-
-  <link rel="preload" href="assets/fonts/raleway-medium.eot" as="font" type="application/vnd.ms-fontobject" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-medium.woff" as="font" type="font/woff" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-medium.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-medium.svg" as="font" type="image/svg+xml" crossorigin="anonymous">
-
-  <link rel="preload" href="assets/fonts/raleway-bold.eot" as="font" type="application/vnd.ms-fontobject" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-bold.woff" as="font" type="font/woff" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-bold.svg" as="font" type="image/svg+xml" crossorigin="anonymous">
-
-  <link rel="preload" href="assets/fonts/raleway-black.eot" as="font" type="application/vnd.ms-fontobject" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-black.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-black.woff" as="font" type="font/woff" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-black.ttf" as="font" type="font/ttf" crossorigin="anonymous">
-  <link rel="preload" href="assets/fonts/raleway-black.svg" as="font" type="image/svg+xml" crossorigin="anonymous">
+  <link rel="preload" onload="this.rel = 'stylesheet'" as="style" href='https://fonts.googleapis.com/css?family=Raleway:300,400,500,700,900|Material+Icons'>
 
   <script defer rel="preload" src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous" as="script"></script>
 
   <link rel="preload" href="https://hosted-sip.civic.com/css/civic-modal.min.css" as="style">
   <script rel="preload" src="https://hosted-sip.civic.com/js/civic.sip.min.js" as="script"></script>
+  
 </head>
 <body>
   <app-root></app-root>
