--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>RCN</title>
-  <meta content="A peer-to-peer credit network protocol based on co-signed smart contracts" name="description">
-  <meta content="RCN" property="og:title">
-  <meta content="A peer-to-peer credit network protocol based on co-signed smart contracts" property="og:description">
-  <link href="https://ripiocredit.network/images/fav.png" rel="shortcut icon" type="image/x-icon">
-  <base href="/">
+  <title>RCN - Ripio Credit Network</title>
+  <meta name="description" content="A peer-to-peer credit network protocol based on co-signed smart contracts">
+  
+  <meta property="fb:app_id" content="000"/>
+  <meta property="og:title" content="RCN - Ripio Credit Network"/>
+  <meta property="og:description" content="A peer-to-peer credit network protocol based on co-signed smart contracts"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:url" content="https://www.facebook.com/ripiocredit.network/"/>
+  <meta property="og:image" content="http://www.url.com/images/facebook-og.png"/>
 
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:title" content="RCN - Ripio Credit Network"/>
+  <meta name="twitter:description" content="A peer-to-peer credit network protocol based on co-signed smart contracts"/>
+  <meta name="twitter:image" content="http://www.url.com/images/twitter-card.png"/>
+  <meta name="twitter:site" content="@rcn_token"/>
+  <meta name="twitter:creator" content="@rcn_token"/>
+
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="https://ripiocredit.network/images/fav.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Preload -->
