--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,20 @@
   <title>RCN - Ripio Credit Network</title>
   <meta name="description" content="A peer-to-peer credit network protocol based on co-signed smart contracts">
   
-  <meta property="fb:app_id" content="000"/>
+  <meta property="fb:app_id" content="197713400941337"/>
   <meta property="og:title" content="RCN - Ripio Credit Network"/>
   <meta property="og:description" content="A peer-to-peer credit network protocol based on co-signed smart contracts"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://www.facebook.com/ripiocredit.network/"/>
   <meta property="og:image" content="http://www.url.com/images/facebook-og.png"/>
-
+  
+  <meta name="twitter:site" content="@rcn_token"/>
+  <meta name="twitter:creator" content="@rcn_token"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="RCN - Ripio Credit Network"/>
   <meta name="twitter:description" content="A peer-to-peer credit network protocol based on co-signed smart contracts"/>
   <meta name="twitter:image" content="http://www.url.com/images/twitter-card.png"/>
-  <meta name="twitter:site" content="@rcn_token"/>
-  <meta name="twitter:creator" content="@rcn_token"/>
-
+  
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="https://ripiocredit.network/images/fav.png">
