--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,15 @@
   <meta property="og:description" content="A peer-to-peer credit network protocol based on co-signed smart contracts"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://www.facebook.com/ripiocredit.network/"/>
-  <meta property="og:image" content="http://www.url.com/images/facebook-og.png"/>
+  <meta property="og:image" content="http://www.url.com/images/facebook-og.png"/> <!-- TODO: Change for the definitive absolute URL -->
+  
   
   <meta name="twitter:site" content="@rcn_token"/>
   <meta name="twitter:creator" content="@rcn_token"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="RCN - Ripio Credit Network"/>
   <meta name="twitter:description" content="A peer-to-peer credit network protocol based on co-signed smart contracts"/>
-  <meta name="twitter:image" content="http://www.url.com/images/twitter-card.png"/>
+  <meta name="twitter:image" content="http://www.url.com/images/twitter-card.png"/> <!-- TODO: Change for the definitive absolute URL -->
   
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
