--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <script defer rel="preload" src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous" as="script"></script>
 
   <!-- <link rel="preload" as="style" href="https://hosted-sip.civic.com/css/civic-modal.min.css"> -->
-  <script rel="preload" src="https://hosted-sip.civic.com/js/civic.sip.min.js" as="script"></script>
+  <!-- <script rel="preload" src="https://hosted-sip.civic.com/js/civic.sip.min.js" as="script"></script> -->
 </head>
 <body>
   <app-root></app-root>
